style.css
@import url('https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap');


div{
    display: block;
}
body{
    height: 100vh;
    width: 100vw;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
button{
background-color: #fff;
}
.logoGoogle{
    padding: 5px;
    height: 15px;
    width: 15px;
}

.google {
    border-radius: 4px;
    border: 1px solid #121212;
    height: 50px;
    width: 100%;
    display: flex;
    align-items: center;
    margin-bottom: 25px;
    justify-content: center;
    cursor: pointer;
    transition: all 0.1s ease-in-out;
    box-sizing: border-box;
}
.google:hover{
    background-color: #2b2b2b;
    color: #fff;
}
.formCard {
    margin: 0 auto;
    max-width: 467px;
    padding: 43px;
    border-radius: 5px;
    box-shadow: rgb(0 0 0 / 10%) 0 0 10px;
    box-sizing: border-box;
    text-align: center;
    z-index: 2;
    position: relative;
    background-color: #fff;
}
.formCard h1 {
    font-size: 30px;
    font-weight: 600;
    color: #121212;
    margin-top: 0px;
    margin-bottom: 10px;
    line-height: 38px;
}
.imgDiv{
    margin-bottom: 0 auto;
}
img{
    max-height: 250px;
    max-width: 250px;
    padding: 15px;
}
.bg {
    position: absolute;
    z-index: -2;
  }
  

.formCard h2 {
    font-size: 14px;
    font-weight: 400;
    color: #82888c;
    margin-top: 0px;
    margin-bottom: 38px;
    line-height: 25px;
}
.inputs{
    padding: 2vh;
    display: flex;
    
}
.inputs input {
    width: 100%;
    padding: 12px;
    border-radius: 5px;
    font-size: 16px;
    border: 1px solid #ccc;
  }
  a{
    color: rgb(121, 166, 250);
    text-decoration: underline;
    font-weight: 550;
    cursor: pointer;
  }

label.placeholder,
p2 {
    color: #82888c;
    font-size: 13.33px;
    font-family: Montserrat !important;
}
p2{
    margin-top: 20px;
}
.getStarted{
    padding: 1vw;
    width: 90%;
    background-color: #2b2b2b;
    color: white;
    font-weight: 600;
    font-size: 1em;
    cursor: pointer;
    transition: ease-in;
    border-radius: 5px;
}

.getStartedDiv {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 2.5vh;
}
.getStarted:hover{
    background-color: #353e47;
}

.orSeparator {
    height: 1px;
    background-color: #e4e4e4;
    flex-grow: 1;
    margin-top: 12px;
}

